apps/nginx/nginx-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  # annotations:
  #   external-dns.alpha.kubernetes.io/hostname: nginx.k8s.local
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
