apps/nginx/nginx-ing.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  rules:
  - host: nginx.k8s.local
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
